# diff-match-patch-rs-bench

./: .gitignore  README.md  bench.sh  compat_exec.sh  compat_make.sh  tests_data.json
go/: bench_test.go  dmp.go  go.mod  main.go
js/: compat.js  package-lock.json  package.json
node/: compat.js  index.js  package-lock.json  package.json
py/: compat.py
python/: bench.py  compat.py
rust/: Cargo.toml
rust/benches/: diff.rs  patch.rs
rust/src/: lib.rs  main.rs
