[package]
name = "diff-match-patch-rs-bench"
version = "0.1.0"
edition = "2021"
authors = ["Anubhab Bandyopadhyay"]

[dependencies]
criterion = "0"
diff-match-patch-rs = { git = "https://github.com/AnubhabB/diff-match-patch-rs.git", branch = "main", default-features = false } # this crate
diff_match_patch = "0"
diffmatchpatch = "0"
dmp = "0"
dissimilar = "1"


[[bench]]
name = "diff"
harness = false