[package]
name = "diff-match-patch-rs-bench"
version = "0.1.0"
edition = "2021"
authors = ["Anubhab Bandyopadhyay"]

[dependencies]
criterion = "0"
diff-match-patch-rs = "0.1.0-beta.3" # this crate
diff_match_patch = "0"
diffmatchpatch = "0"
dmp = "0"
dissimilar = "1"
serde = { version= "1", features= ["derive"] }
serde_derive = "1"
serde_json = "1"


[[bench]]
name = "diff"
harness = false

[[bench]]
name = "patch"
harness = false